kubernetes-networks/nginx-lb.yaml
kind: Service
apiVersion: v1
metadata:
    name: ingress-nginx
    namespace: ingress-nginx
    labels:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/part-of: ingress-nginx
spec:
    externalTrafficPolicy: Local
    type: LoadBalancer
    selector:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/instance: ingress-nginx
        app.kubernetes.io/component: controller
    ports:
        - name: http
          port: 80
          targetPort: http
        - name: https
          port: 443
          targetPort: https
